--- a/Paranoia.Client/Pages/Index.cshtml
+++ b/Paranoia.Client/Pages/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <form method="post">
-        <label for="characterInput">Enter your character name:</label>
-        <input id="characterInput" name="characterName" />
-        <button type="submit" title="Submit" name="submit" id="submitCharacter" class="border-0 bg-transparent"><i class="fa-solid fa-arrow-right"></i></button>
+<div class="h-100 align-content-center">
+    <h3 class="text-center">Enter Character Name</h3>
+    <form method="post" class="text-center align-content-center">
+        <input id="characterInput" name="characterName" asp-for="CharacterName" />
+        <button type="submit" title="Submit" name="submit" id="submitCharacter" class="border-0 bg-transparent"><i class="fa-solid fa-arrow-right text-white"></i></button>
     </form>
 </div>
